Property fix overflow problems

--- a/wp-content/themes/dazzling/style.css
+++ b/wp-content/themes/dazzling/style.css
@@ -46,6 +46,7 @@ body {
     word-wrap: break-word;
     line-height: 1.7;
     font-size: 14px;
+
 }
 
 a {
@@ -329,13 +330,12 @@ textarea {
 @media (max-width: 540px) {
     #numberquartobanner {
         display: none;
-        overflow: hidden;
     }
     #numberquartomobile {
         display: block;
+        max-width: 100%;
         width: 100%;
         margin: 0 auto;
-        overflow: hidden;
     }
     #numberquartomobilebanner {
         display: block;
@@ -344,22 +344,22 @@ textarea {
     }
     #numberquartoapplemobile {
         position: absolute;
-        width: 100%;
-        margin-top: 156%;
+        width: 50%;
         left: 50%;
+        margin-top: 156%;
     }
     #numberquartogoogleplaymobile {
         position: absolute;
-        width: 100%;
+        width: 50%;
         left: 50%;
         margin-top: 173%;
     }
 
     .iconimagemobile {
-        max-width: 36%;
+        max-width: 72%;
         height: auto;
-        width: auto\9;
-        transform: translateX(-50%);
+        width: 100%;
+        margin-left: -36%;
     }
 }
 
